--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,7 @@
         "php": ">=7.0.0",
 		"ext-json": "*",
         "ext-mbstring": "*",
-        "ext-bcmath": "*",
-		"topthink/think-installer":">=1.0.0",
-		"topthink/framework": "^5.0"
+        "ext-bcmath": "*"
 	},
 	"autoload": {
         "psr-4": {
